--- a/app/src/main/res/layout/activity_module_detail.xml
+++ b/app/src/main/res/layout/activity_module_detail.xml
@@ -40,4 +40,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
+
+    <Button
+        android:id="@+id/buttonback"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Back" />
 </LinearLayout>
